--- a/Source/Quartzmin.RestApi/SPA/quartzmin-spa/src/app/jobs/job-list/job-list.component.html
+++ b/Source/Quartzmin.RestApi/SPA/quartzmin-spa/src/app/jobs/job-list/job-list.component.html
@@ -1,58 +1,82 @@
-<div class="ui inverted page dimmer" id="dimmer"><div class="ui loader"></div></div>
-<div class="ui small left icon input">
-  <input type="text" placeholder="Search Job..." id="search-job">
-  <i class="search icon"></i>
-</div>
-<span>&nbsp;</span>
-<div class="ui small floating dropdown labeled search icon button" id="job-group-filter">
-  <i class="filter icon"></i>
-  <span class="text">Job Group</span>
-  <div class="menu">
-    <div class="header">
-      Filter by group
-    </div>
-    <div class="divider"></div>
-    <div class="item" data-show-all="true"><i>All</i></div>
-    <div class="item" *ngFor="let group of []">{{ group }}</div>
+<ng-container *ngIf="jobs$ | async as data">
+  <div class="ui inverted page dimmer" id="dimmer"><div class="ui loader"></div></div>
+  <div class="ui small left icon input">
+    <input type="text" placeholder="Search Job..." id="search-job">
+    <i class="search icon"></i>
   </div>
-</div>
-<a class="ui right floated primary button" (click)="null">
-  <i class="plus icon"></i>New
-</a>
+  <span>&nbsp;</span>
+  <div class="ui small floating dropdown labeled search icon button" id="job-group-filter">
+    <i class="filter icon"></i>
+    <span class="text">Job Group</span>
+    <div class="menu">
+      <div class="header">
+        Filter by group
+      </div>
+      <div class="divider"></div>
+      <div class="item" data-show-all="true"><i>All</i></div>
+      <div class="item" *ngFor="let group of []">{{ group }}</div>
+    </div>
+  </div>
+  <a class="ui right floated primary button" (click)="null">
+    <i class="plus icon"></i>New
+  </a>
 
-<div id="msg-panel"></div>
+  <div id="msg-panel"></div>
 
-<table class="ui single line table highlight-rows" id="job-list">
-  <thead>
-  <tr>
-    <th>Name</th>
-    <th>Group</th>
-    <th>Class</th>
-    <th style="min-width: 160px">Next Fire Time</th>
-    <th>History</th>
-    <th>Flags</th>
-  </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let job of []">
+  <table class="ui single line table highlight-rows" id="job-list">
+    <thead>
+    <tr>
+      <th>Name</th>
+      <th>Group</th>
+      <th>Class</th>
+      <th style="min-width: 160px">Next Fire Time</th>
+      <th>History</th>
+      <th>Flags</th>
+    </tr>
+    </thead>
+    <tbody>
+    <ng-container [ngSwitch]="data.state">
+      <ng-container *ngSwitchCase="'loading'">
+        <tr>
+          <td colspan="5">Loading...</td>
+        </tr>
+      </ng-container>
+      <ng-container *ngSwitchCase="'loading'">
+        <tr>
+          <td colspan="5">Error: {{ data.error }}</td>
+        </tr>
+      </ng-container>
+      <ng-container *ngSwitchCase="'completed'">
+        <tr *ngSwitchCase="'completed'">
+
+        </tr>
+      </ng-container>
+    </ng-container>
+    <tr *ngIf="data.loading">
+      <td colspan="5">Loading...</td>
+    </tr>
+    <tr *ngIf="data.failed">
+      <td colspan="5">Error: {{data.error}}</td>
+    </tr>
+    <tr *ngFor="let job of data.data">
       <td class="job-name">
-        <a [routerLink]="[job.GroupName, job.JobName]" title="{{ job.Description }}">{{ job.JobName }}</a>
+        <a [routerLink]="[job.groupName, job.jobName]" title="{{ job.description }}">{{ job.jobName }}</a>
       </td>
-      <td class="job-group">{{ job.Group }}</td>
-      <td class="job-type">{{ job.Type }}</td>
+      <td class="job-group">{{ job.groupName }}</td>
+      <td class="job-type">{{ job.type}}</td>
       <td class="next-fire-time"></td>
       <td class="job-histogram">
         <app-histogram></app-histogram>
       </td>
       <td>
-        <div *ngIf="job.Persist" class="ui mini green label" title="Persist Job Data">P</div>
-        <div *ngIf="job.Recovery" class="ui mini purple label" title="Request Recovery">R</div>
-        <div *ngIf="job.Concurrent" class="ui mini orange label" title="Concurrent">C</div>
+        <div *ngIf="job.persist" class="ui mini green label" title="Persist Job Data">P</div>
+        <div *ngIf="job.recovery" class="ui mini purple label" title="Request Recovery">R</div>
+        <div *ngIf="job.concurrent" class="ui mini orange label" title="Concurrent">C</div>
       </td>
     </tr>
-  </tbody>
-</table>
-
+    </tbody>
+  </table>
+</ng-container>
 <ng-template #menu>
   <div>
     <div class="ui small vertical menu borderless" id="job-context-menu">
