Add styles, fix compilation errors

--- a/Source/Quartzmin.RestApi/SPA/quartzmin-spa/src/app/calendars/calendar-form/calendar-form.component.html
+++ b/Source/Quartzmin.RestApi/SPA/quartzmin-spa/src/app/calendars/calendar-form/calendar-form.component.html
@@ -1,7 +1,7 @@
 <div class="ui inverted page dimmer" id="dimmer">
   <div class="ui loader"></div>
 </div>
-<form class="ui form">
+<form class="ui form" [formGroup]="form">
   <div class="ui clearing basic segment" style="padding: 0" id="header">
     <div style="float: right">
       <a class="ui button" id="btn-discard">Discard Changes</a>
