--- a/Source/Quartzmin.RestApi/SPA/quartzmin-spa/src/app/dashboard/dashboard.component.html
+++ b/Source/Quartzmin.RestApi/SPA/quartzmin-spa/src/app/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
 <div id="scheduler-dashboard" *ngIf="(data$ | async) as data">
   <div id="msg-panel"></div>
 
-  <h3 class="ui dividing header" style="margin-top: 0px">Overview</h3>
+  <h3 class="ui dividing header" style="margin-top: 0">Overview</h3>
 
   <div class="ui inverted statistic" style="background-color: #0c5a0c; background-image: linear-gradient(#107c10, #0c5a0c);">
     <div class="value"><i class="small check icon"></i> {{ data.ExecutedJobs }}</div>
