--- a/Source/Quartzmin.RestApi/SPA/quartzmin-spa/src/app/dashboard/dashboard.component.scss
+++ b/Source/Quartzmin.RestApi/SPA/quartzmin-spa/src/app/dashboard/dashboard.component.scss
@@ -1,23 +1,39 @@
-#scheduler-dashboard .ui.dividing.header {
-  margin-bottom: 0;
-}
+.dashboard {
+  .ui.dividing.header {
+    margin-bottom: 0;
+  }
 
-#scheduler-dashboard .ui.table {
-  margin-top: 5px;
+  .ui.table {
+    margin-top: 5px;
+  }
+
+  & > .ui.grid {
+    margin: 0;
+  }
+
+  & > .ui.grid > .column {
+    padding: 14px 0 0 !important;
+  }
+
+  .ui.statistic {
+    padding: 10px;
+    border-radius: 4px;
+    box-shadow: 1px 2px 4px rgba(0,0,0,0.15);
+  }
+
+  .ui.inverted.statistic {
+    text-shadow: 1px 2px 4px rgba(0,0,0,0.25);
+  }
+
+  .ui.statistics--no-shadow {
+    box-shadow: none;
+  }
 }
 
 @media only screen and (max-width: 767px) {
   #scheduler-dashboard .ui.table:not(.unstackable) td:first-child, .ui.table:not(.unstackable) th:first-child {
     font-weight: normal;
   }
-}
-
-#scheduler-dashboard > .ui.grid {
-  margin: 0;
-}
-
-#scheduler-dashboard > .ui.grid > .column {
-  padding: 14px 0 0 !important;
 }
 
 #scheduler-dashboard #msg-panel:not(:empty) {
@@ -72,17 +88,6 @@
   color: #21ba45;
 }
 
-
-#scheduler-dashboard .ui.statistic {
-  padding: 10px;
-  border-radius: 4px;
-  box-shadow: 1px 2px 4px rgba(0,0,0,0.15);
-}
-
-#scheduler-dashboard .ui.inverted.statistic {
-  text-shadow: 1px 2px 4px rgba(0,0,0,0.25);
-}
-
 .dashboard-histogram .histogram {
   height: 100%;
 }
@@ -95,17 +100,16 @@
   width: 13px;
 }
 
-#scheduler-dashboard .ui.table{
+#scheduler-dashboard .ui.table {
   width: auto;
+  border: none;
+
 }
 
 #scheduler-dashboard .ui.table>tbody>tr>td:nth-child(2) {
   font-weight: bold;
 }
 
-#scheduler-dashboard .ui.table {
-  border: none;
-}
 
 
 .statistics-executed {
@@ -131,6 +135,6 @@
   height: 50px;
 }
 
-.statistics--no-shadow {
-  box-shadow: none;
+.dashboard-actions-container {
+  margin-top: 1em;
 }
