--- a/Source/Quartzmin.RestApi/SPA/quartzmin-spa/src/app/menu/menu.component.html
+++ b/Source/Quartzmin.RestApi/SPA/quartzmin-spa/src/app/menu/menu.component.html
@@ -1,7 +1,7 @@
 <div class="ui top inverted stackable menu main-menu">
   <div class="ui container">
     <div class="ui header item">
-      <img class="logo" src="">Quartzmin
+      <img class="logo" src="assets/images/logo.png">Quartzmin
     </div>
 
     <nav>
