Refactor async-data components to structural directives

--- a/Source/Quartzmin.RestApi/ClientApp/src/app/shared/async-data/async-data-wrapper/async-data-wrapper.component.html
+++ b/Source/Quartzmin.RestApi/ClientApp/src/app/shared/async-data/async-data-wrapper/async-data-wrapper.component.html
@@ -1,12 +1,12 @@
 <ng-container [ngSwitch]="data.state">
   <ng-container *ngSwitchCase="'loading'">
-    <ng-container *ngTemplateOutlet="loadingComponent?.loadingTemplate ? loadingComponent.loadingTemplate : defaultLoading"></ng-container>
+    <ng-container *ngTemplateOutlet="loadingComponent ? loadingComponent : defaultLoading"></ng-container>
   </ng-container>
   <ng-container *ngSwitchCase="'error'">
-    <ng-container *ngTemplateOutlet="errorComponent?.errorTemplate ? errorComponent.errorTemplate : defaultError; context: { $implicit: data.error }"></ng-container>
+    <ng-container *ngTemplateOutlet="errorComponent ? errorComponent : defaultError; context: { $implicit: data.error }"></ng-container>
   </ng-container>
   <ng-container *ngSwitchCase="'complete'">
-    <ng-container *ngTemplateOutlet="successComponent.successTemplate; context: { $implicit: data.data }"></ng-container>
+    <ng-container *ngTemplateOutlet="successComponent; context: { $implicit: data.data }"></ng-container>
   </ng-container>
 </ng-container>
 
