--- a/Source/Quartzmin.RestApi/ClientApp/src/app/triggers/trigger-list/trigger-list.component.html
+++ b/Source/Quartzmin.RestApi/ClientApp/src/app/triggers/trigger-list/trigger-list.component.html
@@ -35,42 +35,54 @@
     <th>History</th>
   </tr>
   </thead>
-  <tbody app-async-data-wrapper [data]="triggers$ | async">
-    <app-async-data-success>
-      <ng-template let-triggers>
-        <ng-container *ngFor="let trigger of triggers">
-          <ng-container *ngIf="jobSeparator">
-            <tr class="job-key">
-              <td class="job-name">
-                <a [routerLink]="['jobs', job.group, job.name, 'edit']">{{ job }}</a>
-              </td>
-              <td class="job-group">{{ job.group }}</td>
-              <td colspan="6" style="text-align: right">
-                <a (click)="pauseAll()" class="ui super tiny button btn-pause-all"><i class="pause icon"></i>Pause All</a>
-                <a (click)="resumeAll()" class="ui super tiny button btn-resume-all"><i class="play icon"></i>Resume All</a>
-              </td>
-            </tr>
-          </ng-container>
-
-          <tr>
-            <td class="trigger-name">
-              <i *ngIf="trigger.isPaused" class="small pause icon" title="Paused"></i>
-              <a [routerLink]="['triggers', trigger.group, trigger.name, 'edit']" title="{{ trigger.description }}">{{ trigger.name }}</a>
+  <ng-container *ngIf="(triggers$ | async) as resolvedData">
+  <tbody app-async-data-wrapper [data]="resolvedData">
+    <ng-container *appAsyncDataSuccess="let triggers">
+      <ng-container *ngFor="let trigger of triggers">
+        <ng-container *ngIf="jobSeparator">
+          <tr class="job-key">
+            <td class="job-name">
+              <a [routerLink]="['jobs', job.group, job.name, 'edit']">{{ job }}</a>
             </td>
-            <td class="trigger-group">{{ trigger.group }}</td>
-            <td class="schedule-desc"> <!--  data-content="{{ScheduleDescription}}" -->
-              <i class="{{TypeIcon}} icon"></i>{{TypeString}}
+            <td class="job-group">{{ job.group }}</td>
+            <td colspan="6" style="text-align: right">
+              <a (click)="pauseAll()" class="ui super tiny button btn-pause-all"><i class="pause icon"></i>Pause All</a>
+              <a (click)="resumeAll()" class="ui super tiny button btn-resume-all"><i class="play icon"></i>Resume All</a>
             </td>
-            <td class="trigger-start">{{ trigger.startTime | appDate | appDefault: 'N/A' }}</td>
-            <td class="trigger-end">{{ trigger.endTime | appDate | appDefault: 'N/A'  }}</td>
-            <td class="trigger-last-fire">{{ trigger.lastFireTime | appDate | appDefault: 'N/A'  }}</td>
-            <td class="trigger-next-fire">{{ trigger.nextFireTime | appDate | appDefault: 'N/A'  }}</td>
-            <td class="trigger-histogram"><app-histogram></app-histogram></td>
           </tr>
         </ng-container>
-      </ng-template>
-    </app-async-data-success>
-  </tbody>
+
+        <tr>
+          <td class="trigger-name">
+            <i *ngIf="trigger.isPaused" class="small pause icon" title="Paused"></i>
+            <a [routerLink]="['triggers', trigger.group, trigger.name, 'edit']" title="{{ trigger.description }}">{{ trigger.name }}</a>
+          </td>
+          <td class="trigger-group">{{ trigger.group }}</td>
+          <td class="schedule-desc"> <!--  data-content="{{ScheduleDescription}}" -->
+            <i class="{{TypeIcon}} icon"></i>{{TypeString}}
+          </td>
+          <td class="trigger-start">{{ trigger.startTime | appDate | appDefault: 'N/A' }}</td>
+          <td class="trigger-end">{{ trigger.endTime | appDate | appDefault: 'N/A'  }}</td>
+          <td class="trigger-last-fire">{{ trigger.lastFireTime | appDate | appDefault: 'N/A'  }}</td>
+          <td class="trigger-next-fire">{{ trigger.nextFireTime | appDate | appDefault: 'N/A'  }}</td>
+          <td class="trigger-histogram"><app-histogram></app-histogram></td>
+        </tr>
+      </ng-container>
+    </ng-container>
+    <ng-container *appAsyncDataError="let error">
+      <tr>
+        <td>{{ error }}</td>
+      </tr>
+    </ng-container>
+    <ng-container *appAsyncDataLoading>
+      <tr>
+        <td colspan="8">
+          Loading...
+        </td>
+      </tr>
+    </ng-container>
+    </tbody>
+  </ng-container>
 </table>
 
 <div style="display:none">
@@ -82,20 +94,3 @@
     <a class="item menu-delete"><i class="left large red trash alternate outline icon"></i>Delete</a>
   </div>
 </div>
-
-<ng-container *ngIf="triggers$ | async as triggers">
-<app-async-data-wrapper [data]="triggers">
-  <app-async-data-success>
-    <ng-template let-data>
-      Success
-      {{ data | json }}
-    </ng-template>
-  </app-async-data-success>
-  <app-async-data-error>
-    <ng-template let-error>
-      Error
-      {{ error  | json }}
-    </ng-template>
-  </app-async-data-error>
-</app-async-data-wrapper>
-</ng-container>
