--- a/Source/Quartzmin.RestApi/ClientApp/src/app/dashboard/dashboard.component.html
+++ b/Source/Quartzmin.RestApi/ClientApp/src/app/dashboard/dashboard.component.html
@@ -6,17 +6,17 @@
   <h3 class="ui dividing header" style="margin-top: 0">Overview</h3>
 
   <div class="ui inverted statistic statistics-executed">
-    <div class="value"><i class="small check icon"></i> {{ data.ExecutedJobs }}</div>
+    <div class="value"><i class="small check icon"></i> {{ data.jobs.countExecuted }}</div>
     <div class="label">Jobs executed</div>
   </div>
 
   <div class="ui inverted statistic statistics-failed">
-    <div class="value"><i class="small close icon"></i> {{ data.FailedJobs }}</div>
+    <div class="value"><i class="small close icon"></i> {{ data.jobs.countFailed }}</div>
     <div class="label">Jobs failed</div>
   </div>
 
   <div class="ui inverted statistic statistics-running">
-    <div class="value"><i class="small play icon"></i> {{ data.ExecutingJobs }}</div>
+    <div class="value"><i class="small play icon"></i> {{ data.jobs.countRunning }}</div>
     <div class="label">Jobs executing</div>
   </div>
 
@@ -31,8 +31,8 @@
 
   <div class="ui statistic statistics--no-shadow">
     <div class="inline-stats">
-      <span>{{ data.JobsCount }}</span> jobs<br>
-      <span>{{ data.TriggerCount }}</span> triggers
+      <span>{{ data.jobsCount }}</span> jobs<br>
+      <span>{{ data.triggersCount }}</span> triggers
     </div>
   </div>
 
@@ -43,19 +43,19 @@
         <tbody>
         <tr>
           <td style="min-width: 220px">In Standby Mode</td>
-          <td>{{ data.InStandbyMode }}</td>
+          <td>{{ data.inStandByMode }}</td>
         </tr>
         <tr>
           <td>Running Since</td>
-          <td>{{ data.RunningSince | date }} UTC</td>
+          <td>{{ data.runningSince | date }} UTC</td>
         </tr>
         <tr>
           <td>Shutdown</td>
-          <td>{{ data.Shutdown }}</td>
+          <td>{{ data.shutdown }}</td>
         </tr>
         <tr>
           <td>Started</td>
-          <td>{{ data.Started }}</td>
+          <td>{{ data.started }}</td>
         </tr>
         </tbody>
       </table>
@@ -64,7 +64,7 @@
       <h3 class="ui dividing header">Actions</h3>
 
       <div class="dashboard-actions-container">
-        <ng-container *ngIf="data.InStandbyMode; else notStandByButton">
+        <ng-container *ngIf="data.inStandByMode; else notStandByButton">
           <button class="ui small button green" id="btn-start" (click)="start()"><i class="play icon"></i>Start</button>
         </ng-container>
         <ng-template #notStandByButton>
@@ -119,31 +119,31 @@
     <tbody>
     <tr>
       <td style="min-width: 220px">Machine Name</td>
-      <td>{{ data.MachineName }}</td>
+      <td>{{ data.machineName }}</td>
     </tr>
     <tr>
       <td>Application</td>
-      <td>{{ data.Application }}</td>
+      <td>{{ data.application }}</td>
     </tr>
     <tr>
       <td>Scheduler Name</td>
-      <td>{{ data.SchedulerName }}</td>
+      <td>{{ data.scheduler.name }}</td>
     </tr>
     <tr>
       <td>Scheduler Instance Id</td>
-      <td>{{ data.SchedulerInstanceId }}</td>
+      <td>{{ data.scheduler.instanceId }}</td>
     </tr>
     <tr>
       <td>Scheduler Remote</td>
-      <td>{{ data.SchedulerRemote }}</td>
+      <td>{{ data.scheduler.remote}}</td>
     </tr>
     <tr>
       <td>Scheduler Type</td>
-      <td>{{ data.SchedulerType.AssemblyQualifiedName}}</td>
+      <td>{{ data.scheduler.type }}</td>
     </tr>
     <tr>
       <td>Version</td>
-      <td>{{ data.Version }}</td>
+      <td>{{ data.scheduler.version }}</td>
     </tr>
     </tbody>
   </table>
@@ -153,15 +153,15 @@
     <tbody>
     <tr>
       <td style="min-width: 220px">Job Store Clustered</td>
-      <td>{{ data.JobStoreClustered }}</td>
+      <td>{{ data.jobStore.clustered }}</td>
     </tr>
     <tr>
       <td>Job Store Supports Persistence</td>
-      <td>{{ data.JobStoreSupportsPersistence }}</td>
+      <td>{{ data.jobStore.supportsPersistence }}</td>
     </tr>
     <tr>
       <td>Job Store Type</td>
-      <td>{{ data.JobStoreType.AssemblyQualifiedName }}</td>
+      <td>{{ data.jobStore.type }}</td>
     </tr>
     </tbody>
   </table>
@@ -171,11 +171,11 @@
     <tbody>
     <tr>
       <td style="min-width: 220px">Thread Pool Size</td>
-      <td>{{ data.ThreadPoolSize }}</td>
+      <td>{{ data.threadPool.size }}</td>
     </tr>
     <tr>
       <td>Thread Pool Type</td>
-      <td>{{ data.ThreadPoolType.AssemblyQualifiedName }}</td>
+      <td>{{ data.threadPool.type }}</td>
     </tr>
     </tbody>
   </table>
