Fix group actions styles

--- a/Source/Quartzmin.RestApi/ClientApp/src/app/dashboard/dashboard.component.html
+++ b/Source/Quartzmin.RestApi/ClientApp/src/app/dashboard/dashboard.component.html
@@ -47,7 +47,7 @@
         </tr>
         <tr>
           <td>Running Since</td>
-          <td>{{ data.runningSince | date }} UTC</td>
+          <td>{{ data.runningSince | appDate }} UTC</td>
         </tr>
         <tr>
           <td>Shutdown</td>
