--- a/Source/Quartzmin.RestApi/ClientApp/src/app/jobs/job-form/job-data-map/job-data-map.component.html
+++ b/Source/Quartzmin.RestApi/ClientApp/src/app/jobs/job-form/job-data-map/job-data-map.component.html
@@ -13,12 +13,18 @@
         <input type="text" placeholder="Parameter Name" autocomplete="off" formControlName="name">
       </td>
       <td class="value-col field accept-error">
+        <app-data-input
+          placeholder="Provide value"
+          [type]="dataMap.controls[i].get('type').value"
+          formControlName="value"
+        >
+        </app-data-input>
         <!-- {{RenderJobDataMapValue @Services item}} -->
       </td>
       <td class="type-col">
         <mat-select placeholder="Select Type" formControlName="type">
-          <mat-option *ngFor="let type of supportedTypes" [value]="type">
-            {{ type }}
+          <mat-option *ngFor="let type of supportedTypes" [value]="type.value">
+            {{ type.name }}
           </mat-option>
         </mat-select>
         <a href="javascript:void(0)" (click)="cloneItem(i)" class="copy-row" title="Copy"><i class="large black copy outline icon"></i></a>
