--- a/Source/Quartzmin.RestApi/ClientApp/src/app/dashboard/dashboard.component.html
+++ b/Source/Quartzmin.RestApi/ClientApp/src/app/dashboard/dashboard.component.html
@@ -82,35 +82,8 @@
 
       <app-group-actions
         header="Trigger Groups"
-        [groups]="jobGroups$ | async">
+        [groups]="triggerGroups$ | async">
       </app-group-actions>
-
-
-      <!--
-
-      <div class="group-actions" id="job-groups">
-        <h4 class="ui dividing header">Job Groups</h4>
-        <ul>
-          <li *ngFor="let group of jobGroups$ | async" class="resumed">
-            {{ group }}
-            <button class="ui super tiny button"><i class="pause icon"></i>Pause</button>
-          </li>
-        </ul>
-      </div>
-
-
-      <div class="group-actions" id="trigger-groups">
-        <h4 class="ui dividing header">Trigger Groups</h4>
-        <ul>
-          <li *ngFor="let triggerGroup of jobGroups$ | async" class="paused">
-            {{ triggerGroup }}
-            <button class="ui super tiny button"><i class="play icon"></i>Resume</button>
-          </li>
-        </ul>
-      </div>
-      {{>GroupActions items=JobGroups id='job-groups' header='Job Groups'}}
-      {{>GroupActions items=TriggerGroups id='trigger-groups' header='Trigger Groups'}}
-      -->
     </div>
   </div>
 
