--- a/Source/Quartzmin.RestApi/ClientApp/src/app/footer/footer.component.html
+++ b/Source/Quartzmin.RestApi/ClientApp/src/app/footer/footer.component.html
@@ -1,3 +1,5 @@
 <footer>
-  <a href="https://github.com/jlucansky/Quartzmin" target="_blank"><i class="github icon"></i> Quartzmin&nbsp;&nbsp;v{{QuartzminVersion}}</a>
+  <a href="https://github.com/jlucansky/Quartzmin" target="_blank"><i class="github icon"></i>
+    Quartzmin&nbsp;&nbsp;v{{ quartzMinVersion }}
+  </a>
 </footer>
