--- a/Source/Quartzmin.RestApi/ClientApp/src/app/triggers/trigger-form/trigger-form.component.html
+++ b/Source/Quartzmin.RestApi/ClientApp/src/app/triggers/trigger-form/trigger-form.component.html
@@ -1,3 +1,329 @@
-<p>
-  trigger-form works!
-</p>
+<div class="ui inverted page dimmer" id="dimmer"><div class="ui loader"></div></div>
+
+<form class="ui form" [formGroup]="form" (ngSubmit)="submitForm()">
+  <div class="ui clearing basic segment" style="padding: 0" id="header">
+    <div style="float: right">
+      <a class="ui button" id="btn-discard" (click)="resetForm()">Discard Changes</a>
+      <ng-container *ngIf="isEdit; else saveTriggerBtn">
+        <div class="negative ui button" id="btn-delete">Delete</div>
+      </ng-container>
+      <ng-template #saveTriggerBtn>
+        <div class="ui primary button" id="btn-save">Save</div>
+      </ng-template>
+    </div>
+    <h1 class="ui left floated header">
+      <ng-container *ngIf="isEdit; else newTrigger">Edit Trigger</ng-container>
+      <ng-template #newTrigger>Add Trigger</ng-template>
+    </h1>
+  </div>
+
+  <div class="ui segment">
+    <div id="trigger-properties">
+      <div class="field">
+        <label>Trigger Type</label>
+        <div class="inline fields" id="trigger-type-radios">
+          <div class="field">
+            <div class="ui radio checkbox">
+              <input type="radio" id="triggerTypeCron" value="cron" formControlName="type">
+              <label for="triggerTypeCron">Cron</label>
+            </div>
+          </div>
+          <div class="field">
+            <div class="ui radio checkbox">
+              <input type="radio" id="triggerTypeSimple" value="simple" formControlName="type">
+              <label for="triggerTypeSimple">Simple</label>
+            </div>
+          </div>
+          <div class="field">
+            <div class="ui radio checkbox">
+              <input type="radio" id="triggerTypeCalendar" value="calendar" formControlName="type">
+              <label for="triggerTypeCalendar">Calendar Interval</label>
+            </div>
+          </div>
+          <div class="field">
+            <div class="ui radio checkbox">
+              <input type="radio" id="triggerTypeDaily" value="daily" formControlName="type">
+              <label for="triggerTypeDaily">Daily Time Interval</label>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="fields">
+        <div class="twelve wide field accept-error">
+          <label for="jobSelect">Job</label>
+          <mat-select class="ui fluid dropdown" formControlName="job" id="jobSelect">
+            <mat-option value="">Select</mat-option>
+            <mat-option *ngFor="let job of jobs" [value]="job">
+              {{ job.name }}
+            </mat-option>
+          </mat-select>
+        </div>
+      </div>
+
+      <div class="two fields">
+        <div class="field accept-error">
+          <label for="triggerName">Trigger Name</label>
+          <input type="text" placeholder="Trigger Name" id="triggerName" formControlName="name" />
+        </div>
+        <div class="field accept-error">
+          <label for="triggerGroup">Trigger Group</label>
+          <mat-autocomplete class="ui search selection dropdown allow-additions" id="triggerGroup" formControlName="group">
+            <mat-option *ngFor="let group of groups" [value]="group">
+              {{ group }}
+            </mat-option>
+          </mat-autocomplete>
+        </div>
+      </div>
+
+      <div class="field accept-error">
+        <label for="triggerDescription">Description</label>
+        <textarea rows="2" id="triggerDescription" formControlName="description"></textarea>
+      </div>
+
+      <div class="fields">
+        <div class="five wide field accept-error">
+          <label for="triggerStartDate">Start Date (UTC)</label>
+          <div class="ui calendar date-time">
+            <div class="ui fluid input left icon">
+              <i class="calendar alternate outline icon"></i>
+              <input id="triggerStartDate" type="text" autocomplete="off" placeholder="Date/Time" formControlName="startDate">
+            </div>
+          </div>
+        </div>
+        <div class="five wide field accept-error">
+          <label for="triggerEndDate">End Date (UTC)</label>
+          <div class="ui calendar date-time">
+            <div class="ui fluid input left icon">
+              <i class="calendar alternate outline icon"></i>
+              <input id="triggerEndDate" type="text" autocomplete="off" placeholder="Date/Time"  formControlName="endDate">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="fields">
+        <div class="eight wide field accept-error">
+          <label for="triggerCalendar">Calendar</label>
+          <select id="triggerCalendar" class="ui fluid dropdown allow-empty" formControlName="calendarName">
+            <option value="">--- Not Set ---</option>
+          </select>
+        </div>
+      </div>
+
+      <div class="fields">
+        <div class="eight wide field accept-error">
+          <label for="misfireInstructions">Misfire Instruction</label>
+          <select class="ui fluid dropdown" id="misfireInstructions" formControlName="misfireInstructions">
+
+          </select>
+        </div>
+        <div class="two wide field accept-error">
+          <label>Priority</label>
+          <mat-select class="ui search selection dropdown allow-additions" id="triggerPriority" formControlName="priority">
+            <mat-option></mat-option>
+          </mat-select>
+        </div>
+      </div>
+
+      <h3 class="ui dividing header" id="specificTriggerHeader"></h3>
+
+      <div class="cron trigger-type" *ngIf="form.get('type').value === 'cron'">
+        <div class="fields">
+          <div class="seven wide field accept-error cron-field">
+            <label for="cron-expression">Cron Expression <a href="http://cronmaker.com" target="_blank">
+              <i class="external alternate icon"></i>http://cronmaker.com</a>
+            </label>
+            <input type="text" placeholder="Cron Expression" id="cron-expression" formControlName="cronExpression" />
+            <div style="float: right; cursor:pointer; display: none" id="next-cron-dates"><i class="eye icon"></i></div>
+            <p id="cron-desc"></p>
+          </div>
+          <div class="nine wide field accept-error">
+            <label for="triggerTimeZone">Time Zone</label>
+            <mat-select class="ui fluid search fulltext selection dropdown allow-empty" id="triggerTimeZone" formControlName="timezone">
+              <option value="">--- Not Set ---</option>
+            </mat-select>
+          </div>
+        </div>
+      </div>
+
+      <div class="simple trigger-type" *ngIf="form.get('type').value === 'simple'">
+        <div class="fields">
+          <div class="four wide field accept-error">
+            <label for="repeatInterval">Repeat Interval</label>
+            <input type="text" placeholder="Repeat Interval" id="repeatInterval" formControlName="repeatInterval" />
+          </div>
+          <div class="three wide field accept-error">
+            <label>Unit</label>
+            <mat-select formControlName="repeatUnit">
+
+            </mat-select>
+          </div>
+        </div>
+
+        <div class="fields">
+          <div class="four wide field accept-error">
+            <label for="triggerSimpleRepeatCount">Repeat Count</label>
+            <input type="text" placeholder="Repeat Count" id="triggerSimpleRepeatCount" formControlName="repeatCount" />
+          </div>
+        </div>
+
+        <div class="field">
+          <div class="ui checkbox">
+            <input id="triggerSimpleRepeatForever" type="checkbox" formControlName="repeatForever" />
+            <label for="triggerSimpleRepeatForever">Repeat Forever</label>
+          </div>
+        </div>
+
+      </div>
+
+      <div class="calendar trigger-type" *ngIf="form.get('type').value === 'calendar'">
+        <div class="fields">
+          <div class="four wide field accept-error">
+            <label>Repeat Interval</label>
+            <input type="text" name="trigger[calendar.repeatInterval]" placeholder="Repeat Interval" />
+          </div>
+          <div class="three wide field accept-error">
+            <label>Unit</label>
+          </div>
+          <div class="nine wide field accept-error">
+            <label>Time Zone</label>
+            <select class="ui fluid search fulltext selection dropdown allow-empty" name="trigger[calendar.timeZone]">
+              <option value="">--- Not Set ---</option>
+            </select>
+          </div>
+        </div>
+
+        <div class="field">
+          <div class="ui checkbox">
+            <input id="preserveHourAcrossDst" type="checkbox" formControlName="preserveHourAcrossDst" />
+            <label for="preserveHourAcrossDst">Preserve Hour of Day Across Daylight Savings</label>
+          </div>
+        </div>
+
+        <div class="field">
+          <div class="ui checkbox">
+            <input id="skipDayIfHourDoesNotExist" type="checkbox" formControlName="skipDayIfHourDoesNotExist" />
+            <label for="skipDayIfHourDoesNotExist">Skip Day If Hour Does Not Exist</label>
+          </div>
+        </div>
+      </div>
+
+      <div class="daily trigger-type" *ngIf="form.get('type').value === 'daily'">
+        <div class="fields">
+          <div class="four wide field accept-error">
+            <label>Repeat Interval</label>
+            <input type="text" name="trigger[daily.repeatInterval]" placeholder="Repeat Interval"  />
+          </div>
+          <div class="three wide field accept-error">
+            <label>Unit</label>
+          </div>
+          <div class="nine wide field accept-error">
+            <label>Time Zone</label>
+            <select class="ui fluid search fulltext selection dropdown allow-empty" name="trigger[daily.timeZone]">
+              <option value="">--- Not Set ---</option>
+            </select>
+          </div>
+        </div>
+
+        <div class="fields">
+          <div class="four wide field accept-error">
+            <label for="triggerDailyRepeatCount">Repeat Count</label>
+            <input id="triggerDailyRepeatCount" type="text" placeholder="Repeat Count" formControlName="repeatCount" />
+          </div>
+        </div>
+
+        <div class="field">
+          <div class="ui checkbox">
+            <input id="triggerDailyRepeatForever" type="checkbox" formControlName="repeatForever">
+            <label for="triggerDailyRepeatForever">Repeat Forever</label>
+          </div>
+        </div>
+
+        <div class="fields">
+          <div class="four wide field accept-error">
+            <label for="triggerStartTime">Start Time of Day</label>
+            <div class="ui calendar time-only">
+              <div class="ui fluid input left icon">
+                <i class="clock alternate outline icon"></i>
+                <input id="triggerStartTime" type="text" autocomplete="off" placeholder="Time" formControlName="startTime">
+              </div>
+            </div>
+          </div>
+          <div class="four wide field accept-error">
+            <label for="triggerEndTime">End Time of Day</label>
+            <div class="ui calendar time-only">
+              <div class="ui fluid input left icon">
+                <i class="clock alternate outline icon"></i>
+                <input id="triggerEndTime" type="text" autocomplete="off" placeholder="Time" formControlName="endTime">
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <ng-container *ngIf="['daysOfWeek']">
+          <div class="field">
+            <label>Days of Week</label>
+            <div class="inline fields">
+              <div class="field">
+                <div class="ui checkbox">
+                  <input type="checkbox" name="trigger[daily.daysOfWeek.monday]" value="True" />
+                  <label>Monday</label>
+                </div>
+              </div>
+              <div class="field">
+                <div class="ui checkbox">
+                  <input type="checkbox" name="trigger[daily.daysOfWeek.tuesday]" value="True" />
+                  <label>Tuesday</label>
+                </div>
+              </div>
+              <div class="field">
+                <div class="ui checkbox">
+                  <input type="checkbox" name="trigger[daily.daysOfWeek.wednesday]" value="True" />
+                  <label>Wednesday</label>
+                </div>
+              </div>
+              <div class="field">
+                <div class="ui checkbox">
+                  <input type="checkbox" name="trigger[daily.daysOfWeek.thursday]" value="True" />
+                  <label>Thursday</label>
+                </div>
+              </div>
+              <div class="field">
+                <div class="ui checkbox">
+                  <input type="checkbox" name="trigger[daily.daysOfWeek.friday]" value="True" />
+                  <label>Friday</label>
+                </div>
+              </div>
+              <div class="field">
+                <div class="ui checkbox">
+                  <input type="checkbox" name="trigger[daily.daysOfWeek.saturday]" value="True" />
+                  <label>Saturday</label>
+                </div>
+              </div>
+              <div class="field">
+                <div class="ui checkbox">
+                  <input type="checkbox" name="trigger[daily.daysOfWeek.sunday]" value="True" />
+                  <label>Sunday</label>
+                </div>
+              </div>
+            </div>
+          </div>
+        </ng-container>
+      </div>
+    </div>
+    <h3 class="ui dividing header">Job Data Map</h3>
+
+    <app-job-data-map [form]="form"></app-job-data-map>
+  </div>
+</form>
+
+<div class="ui mini modal" id="delete-dialog">
+  <div class="content">
+    <p>Are you sure you want to delete this trigger?</p>
+    <p><b class="confirm-item"></b></p>
+  </div>
+  <div class="actions">
+    <div class="ui approve red button">Delete</div>
+    <div class="ui cancel button">Cancel</div>
+  </div>
+</div>
